# advent-of-code

./: AoC201704A.elm  README.md  advent-of-code.cabal  aoc  aoc2017.cabal
2017/: aoc
2017/elm/src/: DayWithUpdate.elm  DayWithoutUpdate.elm  Types.elm
2017/test/2017/: 02.yml  03.yml  05.yml
2018/: 02.hs  03.hs  04.hs  05.hs  06.hs  aoc201801.hs
2019/elm/: .gitignore  Makefile  README.md  day.rb  elm.json  run
2019/elm/src/: Helpers.elm
2019/elm/src/Day01/: A.elm  B.elm
2019/elm/src/Day02/: A.elm  B.elm
2019/elm/src/DayDAY/: AB.elm
2019/elm/tests/Test/: Day01.elm  Day02.elm  Main.elm
app/: Main.hs
elm/src/: Helpers.elm  Main.elm
elm/src/Year2017/: Day04.elm
haskell/: advent-of-code.cabal
haskell/app/: Main.hs
haskell/src/: Types.hs  Year2017.hs
haskell/src/Year2017/: Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs
haskell/test/: Year2017Spec.hs
src/: Day01.hs  Day02.hs  Lib.hs  Year2017.hs
src/Year2017/: Day01.hs  Day02.hs
test/: AocSpec.hs  Year2017Spec.hs
test/2017/: 01.yml  03.yml  04.yml  05.yml  06.yml  07.yml  08.yml
