name:                advent-of-code
version:             0.1.0.0
synopsis:            Solutions to Advent of Code 2017
homepage:            https://github.com/bchase/advent-of-code
license:             BSD3
license-file:        LICENSE
author:              Brad Chase
maintainer:          brad@these8bits.com
copyright:           2017 Brad Chase
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

description:         Please see the README on Github at <https://github.com/bchase/advent-of-code#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Year2017
  other-modules:       Year2017.Day01
                     , Year2017.Day02
                     , Year2017.Day03
                     , Year2017.Day04
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , safe
                     , Unique
  default-language:    Haskell2010

executable advent-of-code
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , advent-of-code
                     , containers
                     , text
  default-language:    Haskell2010

test-suite advent-of-code-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Year2017Spec
  build-depends:       base
                     , advent-of-code
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bchase/advent-of-code
